--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    
     <div class="login">
-         <h2>Login Page</h2>
+         <h2>Login </h2>
         <form id="login" method="get" action="login.php">
             <label>Username</label>
             <input type="text" name="Uname" id="Uname" placeholder="Username">
@@ -17,7 +17,7 @@
             <label>Password</label>
             <input type="password" name="Pass" id="Pass" placeholder="Password">
             <br><br>
-            <input type="button" name="log" id="log" value="Login">
+            <input type="button" name="log" id="log" value="LOGIN">
             <br><br>
             <input type="checkbox" id="check">
             <span>Remember me</span>
